<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG">

    <View
        android:id="@+id/view_delete"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@color/colorRed"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/et_phone"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_white"
        app:layout_constraintTop_toTopOf="@id/view_delete"
        app:layout_constraintStart_toStartOf="@id/view_delete"
        app:layout_constraintEnd_toEndOf="@id/view_delete"
        app:layout_constraintBottom_toBottomOf="@id/view_delete" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_delete"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_name"
        android:maxLines="1"
        android:textSize="12sp"
        android:background="@color/colorWhite" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_delete"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_sender"
        android:maxLines="1"
        android:textSize="12sp"
        android:background="@color/colorWhite" />

    <EditText
        android:id="@+id/et_add_phone"
        android:layout_width="0dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="@id/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_add"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_pass"
        android:maxLines="1"
        android:textSize="12sp"
        android:background="@color/colorWhite" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_add_phone"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_add_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline">
    </android.support.v7.widget.RecyclerView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/pressed_confirm"
        android:text="@string/text_save"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />
</android.support.constraint.ConstraintLayout>